# cirdia-algorithms

./: .gitignore  Cargo.toml  Contributing.md  NOTICE  README.md  license.txt  model.json
activity_duration/: Cargo.toml  Readme.md
activity_duration/src/: lib.rs  pulse_points.rs
calorie_burnt/: Cargo.toml  Makefile  Readme.md
calorie_burnt/assets/: calorie_burnt.json  exercise.csv  small.csv  training_data.csv
calorie_burnt/src/: lib.rs
heart_rate/: Cargo.toml  Readme.md
heart_rate/src/: lib.rs
period/: Cargo.toml
period/src/: lib.rs  normal_f64.rs
sleep/: Cargo.toml
sleep/src/: lib.rs
steps/: Cargo.toml  Readme.md  gps.md  peak_detection.md  virtual_steps.md
steps/assets/wrist_25hz/: P13_wrist25.csv  P37_wrist25.csv
steps/src/: lib.rs
steps/src/gps/: mod.rs  models.rs
steps/src/steps/: detection.rs  filtering.rs  intepolation.rs  mod.rs  pre_processing.rs  scoring.rs  time_threshold.rs
