[workspace]
members = [
    "activity_duration",
    "calorie_burnt",
    "steps",
    "heart_rate",
    "period",
]
resolver = "2"

[workspace.dependencies]
csv = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
time = { version = "0.3" }

[workspace.lints.rust]
rust_2018_idioms = "deny"
# missing_docs = "deny"
missing_debug_implementations = "deny" # opt out where Debug is really redundant
future_incompatible = "deny"
unsafe-code = "deny"

[workspace.lints.clippy]
unused_async = "deny"
