[package]
name = "calorie_burnt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
bench = false

[dependencies]
# ML
linfa = { version = "0.7", default-features = false, optional = true, features = [ ] } 
linfa-trees = { version = "0.7", optional = true, default-features = false, features = [ "serde" ] }
ndarray = { version = "0.15", default-features = false, optional = true }

# FS
csv = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

# CLI
clap = { version = "4.5", features = [ "derive" ], optional = true }

[dev-dependencies]
csv = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true

[features]
default = [ "ml", "binary"]
serde = [ "dep:serde" ]
ml = [ "serde", "dep:linfa", "dep:ndarray", "dep:linfa-trees", "dep:serde_json", ]
binary = [ "ml", "dep:clap", "dep:csv", ]

[[bin]]         
name = "training"
required-features = ["binary"]

[[bin]]         
name = "report"
required-features = ["binary"]