[package]
name = "steps"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
csv = { workspace = true }
time = { workspace = true, features = [ "serde", "serde-human-readable"]}
serde = { workspace = true }
rayon = "1.10"

[features]
default = []
serde = [ "dep:serde" ] 

[lints]
workspace = true
